add video block

--- a/index.html
+++ b/index.html
@@ -113,19 +113,67 @@
                                 <button class="gifts__button">ПОЛУЧИТЬ</button>
                             </div>
                             <div class="subscribe">
-                                <img class="subscribe__img" src="images/icon_tg.png" alt="телеграм">
+                                <a class="subscribe__link" target="_blank" href="">
+                                    <img class="subscribe__img" src="images/icon_tg.png" alt="телеграм">
+                                </a>
+
                                 <div>
-                                    <p class="">CALL TO ACTION</p>
-                                    <p>эксклюзивные скидки и</br>
+                                    <p class="subscribe__description">эксклюзивные скидки и</br>
                                         раздачи товаров в нашем</br>
                                         телеграмм канале
                                     </p>
-                                    <button class="gifts__button">ПОДПИСАТЬСЯ</button>
+                                    <button class="subscribe__button">ПОДПИСАТЬСЯ</button>
                                 </div>
                             </div>
                         </div>
                         <img class="offers__img" src="images/delivery_pc.png">
                     </div>
+                </section>
+
+                <section class="video">
+                    <div class="video__header">
+                        <a class="video__link" href="https://www.youtube.com/@eternal_way_ru/videos" target="_blank">
+                            <img class="video__link-img" src="images/icon_yt.png">
+                        </a>
+                        <h1 class="video__title">
+                            <img src="images/our_yt.png">
+                        </h1>
+                        <p class="video__paragraph">НАШИ ПУТЕШЕСТВИЯ</br> ОБЗОРЫ ТОВАРОВ</br>  НОВИНКИ РЫНКА</br>  ЛАЙФХАКИ</p>
+                    </div>
+                    <section class="videos__wrapper">
+                        <div class="videos__yt">
+                            <div class="videos__yt-item">
+                                <a href="https://www.youtube.com/watch?v=WTl_77gEgb4" target="_blank">
+                                    <img src="https://img.youtube.com/vi/WTl_77gEgb4/hqdefault.jpg" alt="Video 1">
+                                </a>
+                            </div>
+                            <div class="videos__yt-item">
+                                <a href="https://www.youtube.com/watch?v=WTl_77gEgb4" target="_blank">
+                                    <img src="https://img.youtube.com/vi/WTl_77gEgb4/hqdefault.jpg" alt="Video 1">
+                                </a>
+                            </div>
+                            <div class="videos__yt-item">
+                                <a href="https://www.youtube.com/watch?v=WTl_77gEgb4" target="_blank">
+                                    <img src="https://img.youtube.com/vi/WTl_77gEgb4/hqdefault.jpg" alt="Video 1">
+                                </a>
+                            </div>
+                            <div class="videos__yt-item">
+                                <a href="https://www.youtube.com/watch?v=WTl_77gEgb4" target="_blank">
+                                    <img src="https://img.youtube.com/vi/WTl_77gEgb4/hqdefault.jpg" alt="Video 1">
+                                </a>
+                            </div>
+                            <div class="videos__yt-item">
+                                <a href="https://www.youtube.com/watch?v=WTl_77gEgb4" target="_blank">
+                                    <img src="https://img.youtube.com/vi/WTl_77gEgb4/hqdefault.jpg" alt="Video 1">
+                                </a>
+                            </div>
+                            <div class="videos__yt-item">
+                                <a href="https://www.youtube.com/watch?v=WTl_77gEgb4" target="_blank">
+                                    <img src="https://img.youtube.com/vi/WTl_77gEgb4/hqdefault.jpg" alt="Video 1">
+                                </a>
+                            </div>
+                        </div>
+                    </section>
                 </section>
 
             </main>
