--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
                                 </a>
                             </li>
                             <li class="carousel__slide">
-                                <a class="carousel__link" target="_blank" href="https://www.ozon.ru/product/tent-chehol-na-avtomobil-zashchitnaya-nakidka-na-avto-s-molniey-pod-dver-zimniy-1018573961/?_bctx=CAMQ07yQMA&asb=16azrIbCVc%252FWwfCJfaa8mxwlEh29wpJqfDHXmm9ev9c%253D&asb2=IxPhjJyNv8Dr9LHWjsGu1mGtIvhAjChC9T7aMU5GYXzKvC3lzxOaKrSnjzYzz1qCKu4ClrfOUIvo6PwOBhgRUvA-vJJpA5cvPyM3gFnwah34awufGAgpANZWizIu0NGFNPpzziuE8tGlIK6PN1wZTT2f_w_lDS6VY0CvJvQBJPM&avtc=1&avte=2&avts=1718990583">
+                                <a class="carousel__link"
+                                   target="_blank"
+                                   href="https://www.ozon.ru/product/tent-chehol-na-avtomobil-zashchitnaya-nakidka-na-avto-s-molniey-pod-dver-zimniy-1018573961/?_bctx=CAMQ07yQMA&asb=16azrIbCVc%252FWwfCJfaa8mxwlEh29wpJqfDHXmm9ev9c%253D&asb2=IxPhjJyNv8Dr9LHWjsGu1mGtIvhAjChC9T7aMU5GYXzKvC3lzxOaKrSnjzYzz1qCKu4ClrfOUIvo6PwOBhgRUvA-vJJpA5cvPyM3gFnwah34awufGAgpANZWizIu0NGFNPpzziuE8tGlIK6PN1wZTT2f_w_lDS6VY0CvJvQBJPM&avtc=1&avte=2&avts=1718990583">
                                     <img class="carousel__image" src="/images/cover_900_1200.png" alt="Покрывало">
                                     <p class="carousel__description">Tент чехол на автомобиль</p>
                                 </a>
@@ -105,7 +107,9 @@
                                 </div>
                                 <div class="checklist__bottom">
                                     <button class="checklist__button">СОХРАНИТЬ</button>
-                                    <p class="checklist__paragraph-bottom">для сборов в</br> путешествие</p>
+                                    <p class="checklist__paragraph-bottom">для сборов в</br>
+                                        путешествие
+                                    </p>
                                 </div>
                             </div>
                             <div class="gift">
@@ -138,7 +142,11 @@
                         <h1 class="video__title">
                             <img src="images/our_yt.png">
                         </h1>
-                        <p class="video__paragraph">НАШИ ПУТЕШЕСТВИЯ</br> ОБЗОРЫ ТОВАРОВ</br>  НОВИНКИ РЫНКА</br>  ЛАЙФХАКИ</p>
+                        <p class="video__paragraph">НАШИ ПУТЕШЕСТВИЯ</br>
+                            ОБЗОРЫ ТОВАРОВ</br>
+                            НОВИНКИ РЫНКА</br>
+                            ЛАЙФХАКИ
+                        </p>
                     </div>
                     <section class="videos__wrapper">
                         <div class="videos__yt">
@@ -177,8 +185,31 @@
                 </section>
 
             </main>
-
         </div>
+
+        <footer class="footer">
+            <div class="footer__description">
+                <p class="footer__paragraph">НАШИ ОФИЦИАЛЬНЫЕ КАНАЛЫ:</p>
+            </div>
+            <div class="footer__social">
+                <a class="footer__social-link" href="#" target="_blank">
+                    <img class="footer__social-img" src="/images/icon_vk.png" alt="Наш ВК">
+                </a>
+                <a class="footer__social-link" href="#" target="_blank">
+                    <img class="footer__social-img" src="/images/icon_rtube.png" alt="Наш Рутьюб">
+                </a>
+                <a class="footer__social-link" href="#" target="_blank">
+                    <img class="footer__social-img" src="/images/icon_inst.png" alt="Наш Инстаграм">
+                </a>
+                <a class="footer__social-link" href="#" target="_blank">
+                    <img class="footer__social-img" src="/images/icon_dzen.png" alt="Наш Дзен">
+                </a>
+                <a class="footer__social-link" href="#" target="_blank">
+                    <img class="footer__social-img" src="/images/icon_wu.png" alt="Наш Вотсап">
+                </a>
+            </div>
+        </footer>
+
         <script src="index.js"></script>
     </body>
 
