--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <div class="page__container">
 
             <header class="header__container">
-                <img class="header__image-left" src="images/header_logo_left.png" alt="Товары для авто и автотуризма">
-                <img class="header__image-middle" src="images/header_logo_mid.png" alt="Логотип">
-                <img class="header__image-right" src="images/header_logo_right.png" alt="Eternal way">
+                <img class="header__image-left" src="images/header-logo-left.png" alt="Товары для авто и автотуризма">
+                <img class="header__image-middle" src="images/header-logo-mid.png" alt="Логотип">
+                <img class="header__image-right" src="images/header-logo-right.png" alt="Eternal way">
             </header>
 
             <main>
@@ -22,7 +22,7 @@
                     <div class="intro__wrapper">
                         <div class="intro-photo">
                             <div class="intro-photo__wrapper">
-                                <img class="intro-photo__image" src="images/founder_of_the_company.png" alt="The founder of the company">
+                                <img class="intro-photo__image" src="images/founder-of-the-company.png" alt="The founder of the company">
                             </div>
                             <p class="intro-photo__name">ИЛЬИН СЕРГЕЙ</p>
                             <p class="intro-photo__role">основатель бренда</p>
@@ -50,7 +50,7 @@
                                         ОТ ПРОСТОЙ ПОКУПКИ
                                     </p>
                                     <a class="intro-description__link-yt" href="https://www.youtube.com/@eternal_way_ru/videos" target="_blank">
-                                        <img src="/images/svg_youtube_icon.svg" width="300px" height="150px">
+                                        <img src="/images/svg-youtube-icon.svg" width="300px" height="150px">
                                     </a>
                                 </div>
                             </div>
@@ -67,7 +67,7 @@
                         <ul class="carousel__slider">
                             <li class="carousel__slide">
                                 <a class="carousel__link" href="link-to-product1.html" target="_blank">
-                                    <img class="carousel__image" src="/images/compressor_900_1200.png" alt="Компрессор">
+                                    <img class="carousel__image" src="/images/compressor-900-1200.png" alt="Компрессор">
                                     <p class="carousel__description">Автомобильный компрессор, 3 в 1</p>
                                 </a>
                             </li>
@@ -75,13 +75,13 @@
                                 <a class="carousel__link"
                                    target="_blank"
                                    href="https://www.ozon.ru/product/tent-chehol-na-avtomobil-zashchitnaya-nakidka-na-avto-s-molniey-pod-dver-zimniy-1018573961/?_bctx=CAMQ07yQMA&asb=16azrIbCVc%252FWwfCJfaa8mxwlEh29wpJqfDHXmm9ev9c%253D&asb2=IxPhjJyNv8Dr9LHWjsGu1mGtIvhAjChC9T7aMU5GYXzKvC3lzxOaKrSnjzYzz1qCKu4ClrfOUIvo6PwOBhgRUvA-vJJpA5cvPyM3gFnwah34awufGAgpANZWizIu0NGFNPpzziuE8tGlIK6PN1wZTT2f_w_lDS6VY0CvJvQBJPM&avtc=1&avte=2&avts=1718990583">
-                                    <img class="carousel__image" src="/images/cover_900_1200.png" alt="Покрывало">
+                                    <img class="carousel__image" src="/images/cover-900-1200.png" alt="Покрывало">
                                     <p class="carousel__description">Tент чехол на автомобиль</p>
                                 </a>
                             </li>
                             <li class="carousel__slide">
                                 <a class="carousel__link" target="_blank" href="link-to-product3.html">
-                                    <img class="carousel__image" src="/images/organaiser_900_1200.png" alt="Органайзер">
+                                    <img class="carousel__image" src="/images/organaiser-900-1200.png" alt="Органайзер">
                                     <p class="carousel__description">Складной органайзер в багажник</p>
                                 </a>
                             </li>
@@ -118,7 +118,7 @@
                             </div>
                             <div class="subscribe">
                                 <a class="subscribe__link" target="_blank" href="">
-                                    <img class="subscribe__img" src="images/icon_tg.png" alt="телеграм">
+                                    <img class="subscribe__img" src="images/icon-tg.png" alt="телеграм">
                                 </a>
 
                                 <div>
@@ -130,17 +130,17 @@
                                 </div>
                             </div>
                         </div>
-                        <img class="offers__img" src="images/delivery_pc.png">
+                        <img class="offers__img" src="images/delivery-pc.png">
                     </div>
                 </section>
 
                 <section class="video">
                     <div class="video__header">
                         <a class="video__link" href="https://www.youtube.com/@eternal_way_ru/videos" target="_blank">
-                            <img class="video__link-img" src="images/icon_yt.png">
+                            <img class="video__link-img" src="images/icon-yt.png">
                         </a>
                         <h1 class="video__title">
-                            <img src="images/our_yt.png">
+                            <img src="images/our-yt.png">
                         </h1>
                         <p class="video__paragraph">НАШИ ПУТЕШЕСТВИЯ</br>
                             ОБЗОРЫ ТОВАРОВ</br>
@@ -193,19 +193,19 @@
             </div>
             <div class="footer__social">
                 <a class="footer__social-link" href="#" target="_blank">
-                    <img class="footer__social-img" src="/images/icon_vk.png" alt="Наш ВК">
+                    <img class="footer__social-img" src="/images/icon-vk.png" alt="Наш ВК">
                 </a>
                 <a class="footer__social-link" href="#" target="_blank">
-                    <img class="footer__social-img" src="/images/icon_rtube.png" alt="Наш Рутьюб">
+                    <img class="footer__social-img" src="/images/icon-rtube.png" alt="Наш Рутьюб">
                 </a>
                 <a class="footer__social-link" href="#" target="_blank">
-                    <img class="footer__social-img" src="/images/icon_inst.png" alt="Наш Инстаграм">
+                    <img class="footer__social-img" src="/images/icon-inst.png" alt="Наш Инстаграм">
                 </a>
                 <a class="footer__social-link" href="#" target="_blank">
-                    <img class="footer__social-img" src="/images/icon_dzen.png" alt="Наш Дзен">
+                    <img class="footer__social-img" src="/images/icon-dzen.png" alt="Наш Дзен">
                 </a>
                 <a class="footer__social-link" href="#" target="_blank">
-                    <img class="footer__social-img" src="/images/icon_wu.png" alt="Наш Вотсап">
+                    <img class="footer__social-img" src="/images/icon-wu.png" alt="Наш Вотсап">
                 </a>
             </div>
         </footer>
