--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                             <img class="video__link-img" src="images/icon-yt.png">
                         </a>
                         <h1 class="video__title">
-                            <img src="images/our-yt.png">
+                            <img src="images/our-yt.PNG">
                         </h1>
                         <p class="video__paragraph">НАШИ ПУТЕШЕСТВИЯ</br>
                             ОБЗОРЫ ТОВАРОВ</br>
@@ -193,7 +193,7 @@
             </div>
             <div class="footer__social">
                 <a class="footer__social-link" href="#" target="_blank">
-                    <img class="footer__social-img" src="/images/icon-vk.png" alt="Наш ВК">
+                    <img class="footer__social-img" src="/images/icon-vk.PNG" alt="Наш ВК">
                 </a>
                 <a class="footer__social-link" href="#" target="_blank">
                     <img class="footer__social-img" src="/images/icon-rtube.png" alt="Наш Рутьюб">
