refactor images stage 2

--- a/index.html
+++ b/index.html
@@ -193,10 +193,10 @@
             </div>
             <div class="footer__social">
                 <a class="footer__social-link" href="#" target="_blank">
-                    <img class="footer__social-img" src="/images/icon-vk.PNG" alt="Наш ВК">
+                    <img class="footer__social-img" src="/images/iconVk.png" alt="Наш ВК">
                 </a>
                 <a class="footer__social-link" href="#" target="_blank">
-                    <img class="footer__social-img" src="/images/icon-rtube.png" alt="Наш Рутьюб">
+                    <img class="footer__social-img" src="/images/iconrtube.png" alt="Наш Рутьюб">
                 </a>
                 <a class="footer__social-link" href="#" target="_blank">
                     <img class="footer__social-img" src="/images/icon-inst.png" alt="Наш Инстаграм">
