--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="page__container">
 
             <header class="header__container">
-                <img class="header__image-left" src="images/header-logo-left.png" alt="Товары для авто и автотуризма">
+                <img class="header__image-left" src="images/header-logo-left-new.png" alt="Товары для авто и автотуризма">
                 <img class="header__image-middle" src="images/header-logo-mid.png" alt="Логотип">
                 <img class="header__image-right" src="images/header-logo-right.png" alt="Eternal way">
             </header>
@@ -66,7 +66,7 @@
                     <div class="carousel__container">
                         <ul class="carousel__slider">
                             <li class="carousel__slide">
-                                <a class="carousel__link" href="link-to-product1.html" target="_blank">
+                                <a class="carousel__link" href="https://www.wildberries.ru/catalog/221797960/detail.aspx" target="_blank">
                                     <img class="carousel__image" src="/images/compressor-900-1200.png" alt="Компрессор">
                                     <p class="carousel__description">Автомобильный компрессор, 3 в 1</p>
                                 </a>
@@ -80,12 +80,11 @@
                                 </a>
                             </li>
                             <li class="carousel__slide">
-                                <a class="carousel__link" target="_blank" href="link-to-product3.html">
+                                <a class="carousel__link" target="_blank" href="https://www.ozon.ru/product/skladnoy-organayzer-v-bagazhnik-avtomobilya-universalnyy-1399395188/?_bctx=CAMQ07yQMA&asb=OzPcLLe2Is%252BYYZRdyx4%252FREVZncG%252FSe7Mp0955OlhTyE%253D&asb2=paHTJjpBTcf6_m9la_gz9soNvq9Vm0WM1UggOa9UY4ip2v5zHqPJSC4-dbxKM-1niXJMge3-MpuGUKSm41hBVccU0nwYNGziQU8e21O548S_9JbAp9pk0UYiNsH-LAurhwFzSd5agXHNmp9qmB9rDOGVtSYe15Fps9vxsW9PUDA&avtc=1&avte=2&avts=1720563098">
                                     <img class="carousel__image" src="/images/organaiser-900-1200.png" alt="Органайзер">
                                     <p class="carousel__description">Складной органайзер в багажник</p>
                                 </a>
                             </li>
-                            
                         </ul>
                     </div>
                     <button class="carousel__button carousel__button--next">&#10095;</button>
@@ -106,7 +105,7 @@
                                     <p class="gifts__description checklist__paragraph-right">ЧЕК ЛИСТ</p>
                                 </div>
                                 <div class="checklist__bottom">
-                                    <button class="checklist__button">СОХРАНИТЬ</button>
+                                    <a class="checklist__button" href="https://docs.google.com/spreadsheets/d/1Xw0djWJeczJUD5H5ORzfsE0Ziny4iXhiKQE2GJcM09g/edit?gid=0#gid=0">СОХРАНИТЬ</a>
                                     <p class="checklist__paragraph-bottom">для сборов в</br>
                                         путешествие
                                     </p>
@@ -114,10 +113,10 @@
                             </div>
                             <div class="gift">
                                 <p class="gift__description">ПОДАРОК</p>
-                                <button class="gifts__button">ПОЛУЧИТЬ</button>
+                                <a class="gifts__button" href="https://t.me/Way_present_bot">ПОЛУЧИТЬ</a>
                             </div>
                             <div class="subscribe">
-                                <a class="subscribe__link" target="_blank" href="">
+                                <a class="subscribe__link" target="_blank" href="https://t.me/thisisthewayru">
                                     <img class="subscribe__img" src="images/icon-tg.png" alt="телеграм">
                                 </a>
 
@@ -126,7 +125,7 @@
                                         раздачи товаров в нашем</br>
                                         телеграмм канале
                                     </p>
-                                    <button class="subscribe__button">ПОДПИСАТЬСЯ</button>
+                                    <a class="subscribe__button subscribe__button-bot" href="https://t.me/thisisthewayru">ПОДПИСАТЬСЯ</a>
                                 </div>
                             </div>
                         </div>
@@ -156,28 +155,28 @@
                                 </a>
                             </div>
                             <div class="videos__yt-item">
-                                <a href="https://www.youtube.com/watch?v=WTl_77gEgb4" target="_blank">
-                                    <img src="https://img.youtube.com/vi/WTl_77gEgb4/hqdefault.jpg" alt="Video 1">
+                                <a href="https://youtu.be/67Egsjq5k9M?si=-Nb07RfAkhxt57_H" target="_blank">
+                                    <img src="https://img.youtube.com/vi/67Egsjq5k9M/hqdefault.jpg" alt="Video 2">
                                 </a>
                             </div>
                             <div class="videos__yt-item">
-                                <a href="https://www.youtube.com/watch?v=WTl_77gEgb4" target="_blank">
-                                    <img src="https://img.youtube.com/vi/WTl_77gEgb4/hqdefault.jpg" alt="Video 1">
+                                <a href="https://youtu.be/2PEVOnu6BJw?si=rpMHSO1OSqqdJd7a" target="_blank">
+                                    <img src="https://img.youtube.com/vi/2PEVOnu6BJw/hqdefault.jpg" alt="Video 3">
                                 </a>
                             </div>
                             <div class="videos__yt-item">
-                                <a href="https://www.youtube.com/watch?v=WTl_77gEgb4" target="_blank">
-                                    <img src="https://img.youtube.com/vi/WTl_77gEgb4/hqdefault.jpg" alt="Video 1">
+                                <a href="https://www.youtube.com/shorts/Xm-hJiMjijo" target="_blank">
+                                    <img src="https://img.youtube.com/vi/Xm-hJiMjijo/hqdefault.jpg" alt="Video 4">
                                 </a>
                             </div>
                             <div class="videos__yt-item">
-                                <a href="https://www.youtube.com/watch?v=WTl_77gEgb4" target="_blank">
-                                    <img src="https://img.youtube.com/vi/WTl_77gEgb4/hqdefault.jpg" alt="Video 1">
+                                <a href="https://www.youtube.com/shorts/c6_dlwnu_Qg" target="_blank">
+                                    <img src="https://img.youtube.com/vi/c6_dlwnu_Qg/hqdefault.jpg" alt="Video 5">
                                 </a>
                             </div>
                             <div class="videos__yt-item">
-                                <a href="https://www.youtube.com/watch?v=WTl_77gEgb4" target="_blank">
-                                    <img src="https://img.youtube.com/vi/WTl_77gEgb4/hqdefault.jpg" alt="Video 1">
+                                <a href="https://www.youtube.com/shorts/O4t4jfvc1ic" target="_blank">
+                                    <img src="https://img.youtube.com/vi/O4t4jfvc1ic/hqdefault.jpg" alt="Video 6">
                                 </a>
                             </div>
                         </div>
@@ -192,19 +191,19 @@
                 <p class="footer__paragraph">НАШИ ОФИЦИАЛЬНЫЕ КАНАЛЫ:</p>
             </div>
             <div class="footer__social">
-                <a class="footer__social-link" href="#" target="_blank">
+                <a class="footer__social-link" href="https://vk.com/vseputemnamp" target="_blank">
                     <img class="footer__social-img" src="/images/iconVk.png" alt="Наш ВК">
                 </a>
                 <a class="footer__social-link" href="#" target="_blank">
                     <img class="footer__social-img" src="/images/iconrtube.png" alt="Наш Рутьюб">
                 </a>
-                <a class="footer__social-link" href="#" target="_blank">
+                <a class="footer__social-link" href="https://www.instagram.com/vse_putem_market" target="_blank">
                     <img class="footer__social-img" src="/images/icon-inst.png" alt="Наш Инстаграм">
                 </a>
                 <a class="footer__social-link" href="#" target="_blank">
                     <img class="footer__social-img" src="/images/icon-dzen.png" alt="Наш Дзен">
                 </a>
-                <a class="footer__social-link" href="#" target="_blank">
+                <a class="footer__social-link" href="https://t.me/thisisthewayru" target="_blank">
                     <img class="footer__social-img" src="/images/icon-wu.png" alt="Наш Вотсап">
                 </a>
             </div>
