--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Товары для автотуризма</title>
     <link rel="stylesheet" href="./pages/index.css">
+    <link rel="icon" type="image/x-icon" href="/images/header-logo-mid.png">
 </head>
 
     <body class="page">
