правки по замечаниям

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                         ЧЕМ ОНИ ОЖИДАЮТ</br>
                                         ОТ ПРОСТОЙ ПОКУПКИ
                                     </p>
-                                    <a class="intro-description__link-yt" href="https://www.youtube.com/@eternal_way_ru/videos" target="_blank">
+                                    <a class="intro-description__link-yt" href="https://youtu.be/rMdLWJbP2TY?si=2lKVyBcXmiOXgJGE" target="_blank">
                                         <img src="/images/svg-youtube-icon.svg" width="300px" height="150px">
                                     </a>
                                 </div>
@@ -107,14 +107,12 @@
                                 </div>
                                 <div class="checklist__bottom">
                                     <a class="checklist__button" href="https://docs.google.com/spreadsheets/d/1Xw0djWJeczJUD5H5ORzfsE0Ziny4iXhiKQE2GJcM09g/edit?gid=0#gid=0">СОХРАНИТЬ</a>
-                                    <p class="checklist__paragraph-bottom">для сборов в</br>
-                                        путешествие
-                                    </p>
+                                    <p class="checklist__paragraph-bottom">для сборов в путешествие</p>
                                 </div>
                             </div>
                             <div class="gift">
                                 <p class="gift__description">ПОДАРОК</p>
-                                <a class="gifts__button" href="https://t.me/Way_present_bot">ПОЛУЧИТЬ</a>
+                                <a class="gifts__button gifts__button-bottom" href="https://t.me/Way_present_bot">ПОЛУЧИТЬ</a>
                             </div>
                             <div class="subscribe">
                                 <a class="subscribe__link" target="_blank" href="https://t.me/thisisthewayru">
@@ -147,6 +145,10 @@
                             НОВИНКИ РЫНКА</br>
                             ЛАЙФХАКИ
                         </p>
+                        <a class="video__link" href="https://www.youtube.com/@eternal_way_ru/videos" target="_blank">
+                            <img class="video__link-bottom" src="images/icon-yt.png">
+                        </a>
+                        <p class="video__paragraph-bottom">Смотрите наши видео:</p>
                     </div>
                     <section class="videos__wrapper">
                         <div class="videos__yt">
@@ -171,8 +173,8 @@
                                 </a>
                             </div>
                             <div class="videos__yt-item">
-                                <a href="https://www.youtube.com/shorts/c6_dlwnu_Qg" target="_blank">
-                                    <img src="https://img.youtube.com/vi/c6_dlwnu_Qg/hqdefault.jpg" alt="Video 5">
+                                <a href="https://youtu.be/rMdLWJbP2TY?si=2lKVyBcXmiOXgJGE" target="_blank">
+                                    <img src="https://img.youtube.com/vi/rMdLWJbP2TY/hqdefault.jpg" alt="Video 5">
                                 </a>
                             </div>
                             <div class="videos__yt-item">
@@ -195,16 +197,16 @@
                 <a class="footer__social-link" href="https://vk.com/vseputemnamp" target="_blank">
                     <img class="footer__social-img" src="/images/iconVk.png" alt="Наш ВК">
                 </a>
-                <a class="footer__social-link" href="#" target="_blank">
+                <a class="footer__social-link" href="https://www.youtube.com/@eternal_way_ru/videos" target="_blank">
                     <img class="footer__social-img" src="/images/iconrtube.png" alt="Наш Рутьюб">
                 </a>
                 <a class="footer__social-link" href="https://www.instagram.com/vse_putem_market" target="_blank">
                     <img class="footer__social-img" src="/images/icon-inst.png" alt="Наш Инстаграм">
                 </a>
-                <a class="footer__social-link" href="#" target="_blank">
+                <a class="footer__social-link" href="https://dzen.ru/vse_putem_za_rulem" target="_blank">
                     <img class="footer__social-img" src="/images/icon-dzen.png" alt="Наш Дзен">
                 </a>
-                <a class="footer__social-link" href="https://t.me/thisisthewayru" target="_blank">
+                <a class="footer__social-link" href="https://api.whatsapp.com/send/?phone=79052189123&text&type=phone_number&app_absent=0" target="_blank">
                     <img class="footer__social-img" src="/images/icon-wu.png" alt="Наш Вотсап">
                 </a>
             </div>
