--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Товары для автотуризма</title>
-    <link rel="stylesheet" href="./pages/index.css">
+    <link rel="stylesheet" href="./pages/index.css?v=1.4" type="text/css" />
     <link rel="icon" type="image/x-icon" href="/images/header-logo-mid.png">
 </head>
 
@@ -50,8 +50,13 @@
                                         ЧЕМ ОНИ ОЖИДАЮТ</br>
                                         ОТ ПРОСТОЙ ПОКУПКИ
                                     </p>
+                                    <div>
+                                        <p class="intro-description__paragraph-bottom">Смотрите видео о нас </p>
+                                        <p class="intro-description__arrow">&#11015;</p>
+                                    </div>
+
                                     <a class="intro-description__link-yt" href="https://youtu.be/rMdLWJbP2TY?si=2lKVyBcXmiOXgJGE" target="_blank">
-                                        <img src="/images/svg-youtube-icon.svg" width="300px" height="150px">
+                                        <img src="/images/icon-yt-based.svg" width="300px" height="150px">
                                     </a>
                                 </div>
                             </div>
