--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div class="page__container">
 
             <header class="header__container">
-                <img class="header__image-left" src="images/header-logo-left-new.png" alt="Товары для авто и автотуризма">
+                <p class="header__paragraph-left">ВСЁ ПУТЕМ</p>
                 <img class="header__image-middle" src="images/header-logo-mid.png" alt="Логотип">
-                <img class="header__image-right" src="images/header-logo-right.png" alt="Eternal way">
+                <p class="header__paragraph-right">ЗА РУЛЁМ</p>
             </header>
 
             <main>
@@ -67,9 +67,15 @@
                     <div class="carousel__container">
                         <ul class="carousel__slider">
                             <li class="carousel__slide">
-                                <a class="carousel__link" href="https://www.wildberries.ru/catalog/221797960/detail.aspx" target="_blank">
-                                    <img class="carousel__image" src="/images/compressor-900-1200.png" alt="Компрессор">
-                                    <p class="carousel__description">Автомобильный компрессор, 3 в 1</p>
+                                <a class="carousel__link" target="_blank" href="https://www.wildberries.ru/catalog/239235402/detail.aspx">
+                                    <img class="carousel__image" src="/images/moika-90-1200.png" alt="Мойка">
+                                    <p class="carousel__description">Автомойка электрическая аккумуляторная</p>
+                                </a>
+                            </li>
+                            <li class="carousel__slide">
+                                <a class="carousel__link" href="https://www.wildberries.ru/catalog/239235116/detail.aspx" target="_blank">
+                                    <img class="carousel__image" src="/images/derjatel-900-1200.png" alt="держатель">
+                                    <p class="carousel__description">Держатель для телефона автомобильный</p>
                                 </a>
                             </li>
                             <li class="carousel__slide">
@@ -81,9 +87,19 @@
                                 </a>
                             </li>
                             <li class="carousel__slide">
-                                <a class="carousel__link" target="_blank" href="https://www.ozon.ru/product/skladnoy-organayzer-v-bagazhnik-avtomobilya-universalnyy-1399395188/?_bctx=CAMQ07yQMA&asb=OzPcLLe2Is%252BYYZRdyx4%252FREVZncG%252FSe7Mp0955OlhTyE%253D&asb2=paHTJjpBTcf6_m9la_gz9soNvq9Vm0WM1UggOa9UY4ip2v5zHqPJSC4-dbxKM-1niXJMge3-MpuGUKSm41hBVccU0nwYNGziQU8e21O548S_9JbAp9pk0UYiNsH-LAurhwFzSd5agXHNmp9qmB9rDOGVtSYe15Fps9vxsW9PUDA&avtc=1&avte=2&avts=1720563098">
-                                    <img class="carousel__image" src="/images/organaiser-900-1200.png" alt="Органайзер">
-                                    <p class="carousel__description">Складной органайзер в багажник</p>
+                                <a class="carousel__link"
+                                   target="_blank"
+                                   href="https://www.ozon.ru/product/vozduhoduvka-mini-akkumulyatornaya-ruchnoy-konditsioner-s-moshchnym-szhatym-vozduhom-1600555324/?_bctx=CAMQ07yQMA&asb=TQRHsIxm3O9%252B4lg0ai1saK38bWcMSKtfQj4azdZcx7A%253D&asb2=AOZHsRo4Y8v1aUxMqaLWEktRiPMwUpIRAaUlgcJHHIL7AmiWcyV1Yb3loNWj2P2Ycm6lMUJ96eR3ktpES1CCZd0C6kBpkdKa8T9wmRNBcSSGT2PLzsFDR6Z-WYT4TWUecKKTNYEs4Yjb05k5LhkM6ybI4UsClrm3Ia2BL5yVY3g&avtc=1&avte=2&avts=1727183447">
+                                    <img class="carousel__image" src="/images/vozduhoduvka-900-1200.png" alt="Воздуходувка">
+                                    <p class="carousel__description">Воздуходувка мини аккумуляторная</p>
+                                </a>
+                            </li>
+                            <li class="carousel__slide">
+                                <a class="carousel__link"
+                                   target="_blank"
+                                   href="https://www.ozon.ru/product/vizitka-parkovochnaya-avtovizitka-v-mashinu-s-magnitnymi-tsiframi-1616626581/?__rr=1&_bctx=CAMQ07yQMA&asb=7qadZJO6kHpeLS6xOkmy1KOTRH3RXzFxl33P0eVSbqI%253D&asb2=bEDs0nlUAAnDmg-svulqP4bv1z_uhbcQtw6wNputpq0FvcpcBaEkrli6pZqrrHZeYO_URI0nneJslLoaRpcNJw&avtc=1&avte=2&avts=1727183135">
+                                    <img class="carousel__image" src="/images/vizitka-900-1200.png" alt="Визитка">
+                                    <p class="carousel__description">Визитка парковочная</p>
                                 </a>
                             </li>
                         </ul>
@@ -106,7 +122,7 @@
                                     <p class="gifts__description checklist__paragraph-right">ЧЕК ЛИСТ</p>
                                 </div>
                                 <div class="checklist__bottom">
-                                    <a class="checklist__button" href="https://docs.google.com/spreadsheets/d/1Xw0djWJeczJUD5H5ORzfsE0Ziny4iXhiKQE2GJcM09g/edit?gid=0#gid=0">СОХРАНИТЬ</a>
+                                    <a class="checklist__button" href="/download/VP_ЧЕК-ЛИСТ_MOB.pdf" target="_blank" download>СОХРАНИТЬ</a>
                                     <p class="checklist__paragraph-bottom">для сборов в путешествие</p>
                                 </div>
                             </div>
