--- a/index.html
+++ b/index.html
@@ -231,6 +231,16 @@
                     <img class="footer__social-img" src="/images/icon-wu.png" alt="Наш Вотсап">
                 </a>
             </div>
+            <div class="footer__info">
+                <p class="footer__info-paragraph">ООО "Таков Путь"</p>
+                <p class="footer__info-paragraph">ИНН 7805798240</p>
+                <p class="footer__info-paragraph">почта для связи:
+                    <a class="footer__info-link" href="mailto:vipserviceway@gmail.com">vipserviceway@gmail.com</a>
+                </p>
+                <p class="footer__info-paragraph">телефон для связи:
+                    <a class="footer__info-link" href="tel:+79052189123">+79052189123</a>
+                </p>
+            </div>
         </footer>
 
         <script src="index.js"></script>
