change check list for download

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="page__container">
 
             <header class="header__container">
-                <p class="header__paragraph-left">ВСЁ ПУТЕМ</p>
+                <p class="header__paragraph-left">ВСЁ ПУТЁМ</p>
                 <img class="header__image-middle" src="images/header-logo-mid.png" alt="Логотип">
                 <p class="header__paragraph-right">ЗА РУЛЁМ</p>
             </header>
@@ -127,7 +127,7 @@
                                     <p class="gifts__description checklist__paragraph-right">ЧЕК ЛИСТ</p>
                                 </div>
                                 <div class="checklist__bottom">
-                                    <a class="checklist__button" href="/download/VP_ЧЕК-ЛИСТ_MOB.pdf" target="_blank" download>СОХРАНИТЬ</a>
+                                    <a class="checklist__button" href="/download/VP_ЧЕК-ЛИСТ%20+%20ссылки.pdf" target="_blank" download>СОХРАНИТЬ</a>
                                     <p class="checklist__paragraph-bottom">для сборов в путешествие</p>
                                 </div>
                             </div>
